test/parser/input_programs/invalid_programs/program5.tea
# invalid use of one liner

func a -> out("nope")